# annabell

./: README.md  annabell_script.txt  pyproject.toml
src/annabell/: crew.py  main.py
src/annabell/config/: agents.yaml  tasks.yaml
src/annabell/tools/: stable_video_tool.py
