[project]
name = "annabell"
version = "0.1.0"
description = "annabell using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0",
    "requests>=2.32.3",
]

[project.scripts]
annabell = "annabell.main:run"
run_crew = "annabell.main:run"
train = "annabell.main:train"
replay = "annabell.main:replay"
test = "annabell.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
